fix spacing on courses page

--- a/kvak/components/courses-list-courses/courses-list-courses.css
+++ b/kvak/components/courses-list-courses/courses-list-courses.css
@@ -1,10 +1,9 @@
 .courses-list-courses-component {
-  padding-block: 3.875rem;
+  padding-block: 5.25rem;
 
   .courses {
     display: grid;
     gap: 1.125rem;
     grid-template-columns: repeat(3, 1fr);
-    margin-top: 2rem;
   }
 }
